--- a/tenzies-game/src/App.css
+++ b/tenzies-game/src/App.css
@@ -12,47 +12,83 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 body{
   background-color: #0B2434;
   padding: 20px;
 }
 main{
   background-color: #F5F5F5;
-  width: 800px;
   height: 400px;
-  margin: 0 auto;
-  border-radius: 21px;
-  text-align: center;
-  padding: 10px;
-}
-main p{
-  font-weight: 600;
-}
-.roll-dice{
-  color: white;
-  background-color: blue;
+  max-width: 800px;
   border-radius: 8px;
-  font-size: 20px;
-  font-weight: 500;
-  border: none;
-  margin-top: 15px;
-  padding: 10px 50px;
+  margin: auto;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .dice-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 400px;
-  margin: auto;
-
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+  margin-bottom: 40px;
 }
 .dice-face{
-  background-color: white;
-  border-radius: 11px;
-  padding: 10px;
-  width: 12%;
-  margin-bottom: 10px;
+  height: 50px;
+  width: 50px;
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
+  border-radius:10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .dice-num{
-  margin:0px;
+  font-size: 2rem;
+}
+.roll-dice{
+  height: 50px;
+  width: 150px;
+  border: none;
+  color: white;
+  background-color: #5035FF;
+  border-radius: 6px;
+  font-size: 1.3rem;
+  cursor: pointer;
+
+}
+.roll-dice:focus{
+  outline: none;
+}
+.roll-dice:active{
+  box-shadow: inset 5px 5px 10px -3px rgba(0,0,0,0.7);
+}
+.title{
+  font-size: 40px;
+  margin: 0px;
 }
